--- a/package.json
+++ b/package.json
@@ -6,12 +6,17 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "verify:create-bot": "ts-node src/scripts/verify_bot_creation.ts"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@types/lodash": "^4.17.21",
     "axios": "^1.13.2",
     "cookies-next": "^6.1.1",
+    "framer-motion": "^12.23.24",
     "lightweight-charts": "^5.0.9",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.554.0",
     "next": "16.0.3",
     "postcss": "^8.5.6",
@@ -22,12 +27,13 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.17",
-    "@types/node": "^20",
+    "@types/node": "^20.19.25",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "16.0.3",
     "tailwindcss": "^4.1.17",
+    "ts-node": "^10.9.2",
     "typescript": "^5"
   }
 }
