--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@radix-ui/react-dialog": "^1.1.15",
     "@types/lodash": "^4.17.21",
     "axios": "^1.13.2",
+    "canvas-confetti": "^1.9.4",
     "cookies-next": "^6.1.1",
     "framer-motion": "^12.23.24",
     "lightweight-charts": "^5.0.9",
@@ -27,6 +28,7 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.17",
+    "@types/canvas-confetti": "^1.9.0",
     "@types/node": "^20.19.25",
     "@types/react": "^19",
     "@types/react-dom": "^19",
