--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "@radix-ui/react-dialog": "^1.1.15",
     "@types/lodash": "^4.17.21",
     "axios": "^1.13.2",
-    "canvas-confetti": "^1.9.4",
     "cookies-next": "^6.1.1",
     "framer-motion": "^12.23.24",
     "lightweight-charts": "^5.0.9",
@@ -22,13 +21,13 @@
     "next": "16.0.3",
     "postcss": "^8.5.6",
     "react": "19.2.0",
+    "react-confetti": "^6.4.0",
     "react-dom": "19.2.0",
     "socket.io-client": "^4.8.1",
     "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.17",
-    "@types/canvas-confetti": "^1.9.0",
     "@types/node": "^20.19.25",
     "@types/react": "^19",
     "@types/react-dom": "^19",
